feat: support multi-tenant cross-index search with score normalization   (#5)
* add muti tenants


* make lint


---------
